argocd/version-specific-go-app/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: go-app-route-canary-route
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: nginx-gateway
  hostnames:
  - go.app.version.split.local
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /user
    backendRefs:
    - name: go-db-service-sample-version-01
      port: 8080
      weight: 10
    - name: go-db-service-sample-version-02
      port: 8080
      weight: 80
